# enterprise-it-automator

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.lock.txt  requirements.txt
.deepeval/: .deepeval_telemetry.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
app/: config.py  logging_config.py  metrics.py  observability.py
app/agent/: ag_ui_bridge.py  graph.py  llm.py  mcp_client.py  mcp_session_cache.py  runner.py  sla_sweep.py  state.py  token_budget.py  transcription.py
app/agent/prompts/: access_change.py  common.py  offboarding.py  onboarding.py
app/api/: auth.py  idempotency.py  main.py  oidc.py  rbac.py  schemas.py
app/db/: models.py  seed.py  session.py
app/mcp_server/: access_server.py  approval_gate.py  identity_server.py  prompts.py  resources.py  server.py  ticketing_server.py  tool_baseline.json  tools.py
app/notifications/: email.py
app/static/: index.html
build_in_public/: 2026-07-18.md
charts/enterprise-it-automator/: Chart.yaml  values.yaml
charts/enterprise-it-automator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  migrate-job.yaml  service.yaml
docs/: RUNBOOKS.md  THREAT-MODEL.md
evals/: __init__.py  deepeval_judge.py  golden.py  run_live.py  run_reasoning_quality.py  runner.py
migrations/: env.py
migrations/versions/: 20260713_42de869b6fed_initial_schema.py  20260721_833aa5c09528_app_access_grants.py
observability/: alert-rules.yml  alertmanager.yml  prometheus.yml
observability/grafana/dashboards/: it-automator-overview.json
observability/grafana/provisioning/dashboards/: provider.yml
scripts/: validate_postgres.sh
tests/: conftest.py  test_api_client_scoping.py  test_approval_gate.py  test_auth.py  test_email_notifications.py  test_golden_tickets.py  test_graph_routing.py  test_health_endpoints.py  test_init_db_concurrent_boot.py  test_mcp_logging_notifications.py  test_mcp_prompts.py  test_mcp_resources.py  test_metrics.py  test_migrations.py  test_observability.py  test_oidc.py  test_replica_safety.py  test_sla_sweep.py  test_ticket_ownership_migration.py  test_token_budget.py  test_tools.py  test_transcribe_endpoint.py  test_transcription.py
