[project]
name = "mcp-it-automator"
version = "0.1.0"
description = "MCP-Enabled Enterprise IT Automator: a LangGraph agent that automates employee onboarding/offboarding via a custom MCP server, with human-in-the-loop approval for sensitive actions."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "langchain-core>=0.3.28",
    "langchain-groq>=0.2.3",
    "langchain-anthropic>=0.3.3",
    "langchain-ibm>=1.1.0",
    "langchain-openai>=1.3.0",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "slowapi>=0.1.9",
    "gunicorn>=23.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "ag-ui-protocol>=0.1.19",
    "prometheus-client>=0.25.0",
    "PyJWT[crypto]>=2.10.0",
    "alembic>=1.16.0",
    # Pinned to a pre-release specifically: 1.93.0 (latest STABLE as of
    # this writing) has no published Windows wheel and fails to build
    # from source on Windows without a Rust toolchain (confirmed against
    # PyPI's release file listing) — 1.94.0rc3 is the first release with
    # one. Revisit this pin once a stable >=1.94.0 ships; the >= bound
    # plus this being a well-known, widely-used package makes a stale
    # rc pin a low, temporary risk rather than a permanent one.
    "litellm>=1.94.0rc3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
# Enforced in CI (ci.yml) over app/ — the full production package typechecks
# clean. Tests are excluded deliberately: their heavy monkeypatching of
# module attributes is idiomatic pytest but type-opaque, and typing them
# would add noise, not safety. python_version matches CI/the Docker image
# (3.13) — 3.11 would be truer to requires-python but modern dependency
# stubs (numpy) already use 3.12+ `type` statements.
python_version = "3.13"
files = ["app"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = false
# Floor set from the measured baseline (see ci.yml's coverage step) — raise
# it as coverage grows; never lower it to make a PR pass.
fail_under = 80
